спринт 16. add django test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,7 @@ jobs:
     - name: test with flake8
       run: |
         python -m flake8
+    - name: test with django-test
+      run: |
+        cd ./infra_project
+        python3 manage.py test
