--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,13 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
+    - name: checkout
+      uses: actions/checkout@v3
     - name: set up python
       uses: actions/setup-python@v4
       with:
         python-version: 3.7
-
     - name: install dependencies
       run: | 
         python -m pip install --upgrade pip 
@@ -25,3 +24,22 @@ jobs:
       run: |
         cd ./infra_project
         python3 manage.py test
+
+  build_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v2
+      - name: login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tag: sapunidze/infra_actions:latest
