спринт 16. push to hub

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tag: sapunidze/infra_actions:latest
+          tags: sapunidze/infra_actions:latest
