--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,21 @@ jobs:
         with:
           push: true
           tags: sapunidze/infra_actions:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_KEY }}
+        passphrase: ${{ secrets.SERVER_PASSPHRASE }}
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull sapunidze/infra_actions:latest
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 sapunidze/infra_actions:latest 
